k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webber-web-service
spec:
  selector:
    app: webber-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
