k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webber-web-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: viper-byte.com
      http:
        paths:
          - path: /henge
            pathType: Prefix
            backend:
              service:
                name: webber-web-service
                port:
                  number: 80
    - host: app.viper-byte.com
      http:
        paths:
          - path: /henge
            pathType: Prefix
            backend:
              service:
                name: webber-web-service
                port:
                  number: 80
    - host: www.viper-byte.com
      http:
        paths:
          - path: /henge
            pathType: Prefix
            backend:
              service:
                name: webber-web-service
                port:
                  number: 80
